@@ -73,7 +73,7 @@ sub sql_row_from_value
 
 sub get_sql_type
 {
-	my( $self, $session, $notnull ) = @_;
+	my( $self, $session ) = @_;
 
 	my @parts = $self->get_sql_names;
 
@@ -82,14 +82,14 @@ sub get_sql_type
 		$_ = $session->get_database->get_column_type(
 			$_,
 			EPrints::Database::SQL_VARCHAR,
-			$notnull,
+			!$self->get_property( "allow_null" ),
 			$self->get_property( "maxlength" ),
 			undef,
 			$self->get_sql_properties,
 		);
 	}
 
-	return join ", ", @parts;
+	return @parts;
 }
 
 # index the family part only...
